src/test/resources/testinput/parsable/symtab/invalid_coco/invalidVariableDeclaration.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidVariableDeclaration {
  inv:
    let
      Set<Integer> set = {{1..2}, {1}}
    in
      true;
}